Fixed the z-index of login and unathorized pages

--- a/Inventory-AAA/Content/Site.scss
+++ b/Inventory-AAA/Content/Site.scss
@@ -1250,6 +1250,10 @@ span {
     font-size: 0.8rem !important;
 }
 
+.parent-page {
+    z-index: 10;
+}
+
 i.login-logo {
     font-size: 9rem;
     color: var(--bg-primary);
